# Meteo4

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
content/: CMakeLists.txt  MainScreen.ui.qml
content/delegates/: LocationPinDelegateForm.ui.qml  WeekDaysViewDelegate.ui.qml
content/views/: CurrentTemperatureView.qml  CurrentTemperatureViewForm.ui.qml  DetailsPanelForm.ui.qml  HighLowView.qml  LocationNameView.qml  LocationNameViewForm.ui.qml  MapView.qml  RecentsView.qml  RecentsViewForm.ui.qml  SeeAllViewForm.ui.qml  StatusView.qml  StatusViewForm.ui.qml
